# mcp-it-ops

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
config/: settings.example.yaml
src/mcp_it_ops/: config.py  server.py
src/mcp_it_ops/tools/: freqtrade.py  host.py  observability.py
tests/: test_backup_status.py  test_container_status.py  test_freqtrade.py  test_grafana_alerts.py  test_influxdb_flux.py  test_loki_logs.py  test_smartd_health.py  test_system_health.py
